--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
         <div class="gallary">
             <img src="images\latest-work\work-1.png">
         </div>
+
+        <div class="gallary">
+            <img src="images\latest-work\work-2.jpg">
+        </div>
+
+        <div class="gallary">
+            <img src="images\latest-work\work-3.jpg">
+        </div>
+    </div>
+    </section>
+
+    <section class="footer-bg">
+        <div class="work-text">
+            <h2>What Clints are Say</h2>
+        </div>
+        <div class="client-text">
+            <h4>Bruce Moccy</h4>
+            <h5>Founder & CEO Alies</h5>
             <p>"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry."</p>
         </div>
         <div id="baby-web" class=" single-experience">
@@ -47,7 +65,6 @@
             <h2>imran07239@gmail.com</h2>
         </div>
     </section>
-
     
 </body>
 
